perf: update benchmark suite
- upgrade Java version to 17 and update dependencies
- introduce jbanking (fr.marcwrobel) as a new benchmark candidate
- restructure IbanBenchmarks into ValidBenchmarks and InvalidBenchmarks
- implement a more robust dataset corruption strategy (sabotageIban)
- add support for Generational ZGC in benchmark runs
- optimize JMH state handling by using a shared BaseState
- update README with latest performance snapshots from 2026-04-09